<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">威尔客论坛</string>
	<string name="app_url">http://192.168.0.105/Discuz_X2_SC_utf8/upload/plugin.php</string>
	<string name="share">分享</string>
	<string name="share_text">Android手机客户端</string>
	<string name="posts">发帖</string>
	<string name="replyposts">回帖</string>
	<string name="threads">主题：</string>
	<string name="ties_num">贴数：</string>
	<string name="read">阅读</string>
	<string name="title">标题：</string>
	<string name="content">内容：</string>
	<string name="reply">回复</string>
	<string name="num1">楼主</string>
	<string name="num2">沙发</string>
	<string name="num3">板凳</string>
	<string name="num4">地板</string>
	<string name="lou">楼</string>
	<string name="di">第</string>
	<string name="ye">页</string>
	<string name="next">下一页</string>
	<string name="jump">跳转</string>
	<string name="forum">版块</string>
	<string name="child_forum">子版块</string>
	<string name="refresh">刷新</string>
	<string name="hot">热贴</string>
	<string name="lastest">新贴</string>
	<string name="user_name">账号</string>
	<string name="password">密码</string>
	<string name="password_again">重复密码</string>
	<string name="email">邮箱</string>
	<string name="back">返回</string>
	<string name="send">发送</string>
	<string name="login">登陆</string>
	<string name="regist">注册</string>
	<string name="standard">标准版</string>
	<string name="simple">精简版</string>
	<string name="user_login">用户登录</string>
	<string name="user_logout">注销用户</string>
	<string name="setting">设置</string>
	<string name="help">帮助</string>
	<string name="feedback">反馈</string>
	<string name="exit">退出应用</string>
	<string name="exit_text">确定要退出 </string>
	<string name="enter">确定</string>
	<string name="cancel">取消</string>
	<string name="picture">图片</string>
	<string name="take_photo">拍照</string>
	<string name="pick_photo">相册</string>
	<string name="remember_pwd">记住密码</string>
	<string name="auto_login">自动登陆</string>
	<string name="show_photo">显示帖子中的图片</string>
	<string name="show_headimg">显示所有头像</string>
	<string name="posts_num">每页显示帖子数 </string>
	<string name="reply_num">每页显示回帖数</string>
	<string name="delete_date">清除所有数据</string>
	<string name="delete_sucess">成功清除所有数据</string>
	<string name="delete">清除</string>
	<string name="current_version">当前版本：</string>
	<string name="upload_fail">上传图片失败</string>
	<string name="choose">请选择操作</string>
	<string name="no_reply">该帖子不能回复</string>
	<string name="titleshort">输入的标题最长100个字符。</string>
	<string name="textshort">输入的内容最短10个字符。</string>
	<string name="usernameshort">输入的用户名最短4个字符，最长15个字符(一个汉字三个字符)。  </string>
	<string name="passwordshort">输入的密码最短6个字符，最长16个字符。 </string>
	<string name="upload">上传</string>
	<string name="upload_sucess">上传成功!</string>
	<string name="send_feedback">提交反馈</string>
	<string name="feedback_hint">请输入您的反馈意见（字数500以内）</string>
	<string name="feedback_title">欢迎您提出宝贵的意见和建议，您留下的每个字都将用来改善我们的服务。</string>
	<string name="update_title">应用更新</string>
	<string name="update_text">发现新版本，是否更新？</string>
	<string name="loadding">正在加载中......</string>
	<string name="down_loadding">正在下载</string>
	<string name="down_text">请稍候......</string>
	<string name="no_posts">没有符合条件的帖子</string>
	<string name="no_subject">该帖已被屏蔽</string>
	<string name="no_msg">提示: 该帖被管理员或版主屏蔽</string>
	<string name="no_message">提示: 作者被禁止或删除 内容自动屏蔽</string>
	<string name="forget_password">忘记密码</string>
	<string name="find_password">找回密码</string>
	<string name="compare_pwd">两次输入的密码不一样</string>
	<string name="empty">请填写完整</string>
	<string name="network_error">网络数据异常</string>
	<string name="format_error">传输格式错误/异常</string>
	<string name="password_error">密码错误</string>
	<string name="email_error">邮箱格式错误</string>
	<string name="username_error">用户名不存在</string>
	<string name="uname_error">账户已存在</string>
	<string name="useremail_error">用户名或邮箱地址错误</string>
	<string name="email_enter">请输入邮箱</string>
	<string name="password_enter">请输入密码</string>
	<string name="username_enter">请输入账号</string>
	<string name="fid_error">版块编号为空</string>
	<string name="tid_error">帖子编号为空</string>
	<string name="title_error">标题为空</string>
	<string name="content_error">内容为空</string>
	<string name="no_login">尚未登陆</string>
	<string name="hot_error">热贴暂未开启</string>
	<string name="no_speak">你已被管理员禁止发言</string>
	<string name="no_visit">你已被管理员禁止访问</string>
	<string name="locking">你已被管理员锁定</string>
	<string name="help_text">
		1、关于我们\n
		该应用为wealk团队制作，如有什么宝贵的意见可以发公司邮箱：
		wealkgame@gmail.com \n\n
		2、菜单\n
		点击 菜单可以看到有多个选项，可以根据需要选择操作。\n\n
		3、回帖\n
		浏览帖子信息时，长按该楼可以回复该楼或分享该楼的内容。\n\n
		4、设置\n
		用户可以根据自己需求设置不同选项，点击确定保存设置。\n\n
		5、图片\n
		帖子中的图片必须在设置里面选择显示图片,并且需要登陆.\n\n
		6、刷新\n
		用户可以刷新现在停留页面的数据。\n\n
		7、分享\n
		用户可以直接分享到第三放应用。\n\n
		8、版本更新\n
		现在的版本号是1.0，我们会继续发布新的版本，为用户带来更好的体验。\n
    </string>
        <string-array name="num">
      <item>10</item>
      <item>20</item>
      <item>50</item>
   	</string-array> 
	<string name="UMBreak_Network">未联网</string>
	<string name="UMUpdateTitle">应用程序有新版本更新</string>
	<string name="UMNewVersion">最新版本: </string>
	<string name="UMGprsCondition">（提示：非WIFI环境）</string>
	<string name="UMUpdateNow">立即更新</string>
	<string name="UMAppUpdate">应用更新</string>
	<string name="UMUpdatingNow">正在更新应用程序...</string>
	<string name="UMNotNow">以后再说</string>
	<string name="UMToast_IsUpdating">正在更新中....</string>
	<string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
</resources>