<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="vertical">
  	<TextView
    	android:layout_width="fill_parent"
    	android:layout_height="40dip"
    	android:gravity="center"
		android:textColor="#FFFFFF"
		android:textSize="20sp"
		android:text="@string/setting"
		android:background="@drawable/tab_bg_unselected"/>
	<ScrollView
	  	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	android:scrollbars="none"
	  	android:background="@color/mi"
	  	android:layout_weight="1.0">
	  	<LinearLayout
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:orientation="vertical">
			<LinearLayout
			  	android:layout_width="fill_parent"
			  	android:layout_height="fill_parent"
			  	android:orientation="vertical"
			  	android:layout_marginTop="30dip"
			  	android:layout_marginLeft="10dip"
			  	android:layout_marginRight="10dip">
			  	<LinearLayout
		  			android:layout_width="fill_parent"
		  			android:layout_height="wrap_content"
		  			android:orientation="horizontal">
		  			<TextView
			  			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:layout_marginLeft="30dip"
			  			android:textSize="16sp"
			  			android:textColor="#000000"
			  			android:text="@string/current_version"/>
			  		<TextView
			  			android:id="@+id/version_text"
			  			android:layout_width="fill_parent"
			  			android:layout_height="wrap_content"
			  			android:layout_marginLeft="5dip"
			  			android:textSize="16sp"
			  			android:textColor="#000000"/>
			  	</LinearLayout>
			  	<LinearLayout
			  		android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:orientation="horizontal"
			  		android:layout_marginTop="10dip">
			  		<TextView
			  			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:paddingTop="10dip"
			  			android:textSize="16sp"
			  			android:textColor="#5E5EA2"
			  			android:text="@string/show_photo"/>
			  		<LinearLayout
				  		android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:gravity="right">
				  		<CheckBox
				  			android:id="@+id/check_img"
				  			android:layout_width="wrap_content"
				  			android:layout_height="wrap_content"/>
			  		</LinearLayout>
			  	</LinearLayout>
			  	<LinearLayout
			  		android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:orientation="horizontal"
			  		android:layout_marginTop="10dip">
			  		<TextView
			  			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:paddingTop="10dip"
			  			android:textSize="16sp"
			  			android:textColor="#5E5EA2"
			  			android:text="@string/show_headimg"/>
			  		<LinearLayout
				  		android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:gravity="right">
				  		<CheckBox
				  			android:id="@+id/check_headImg"
				  			android:layout_width="wrap_content"
				  			android:layout_height="wrap_content"/>
			  		</LinearLayout>
			  	</LinearLayout>
			  	<LinearLayout
			  		android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:orientation="horizontal"
			  		android:layout_marginTop="10dip">
			  		<TextView
			  			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:paddingTop="10dip"
			  			android:textSize="16sp"
			  			android:textColor="#5E5EA2"
			  			android:text="@string/posts_num"/>
			  		<LinearLayout
				  		android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:gravity="right">
				  		<Spinner
				  			android:id="@+id/post_num_spinner"
				  			android:layout_width="wrap_content"
				  			android:layout_height="wrap_content"/>
			  		</LinearLayout>
			  	</LinearLayout>
			  	<LinearLayout
			  		android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:orientation="horizontal"
			  		android:layout_marginTop="10dip">
			  		<TextView
			  			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:paddingTop="10dip"
			  			android:textSize="16sp"
			  			android:textColor="#5E5EA2"
			  			android:text="@string/reply_num"/>
			  		<LinearLayout
				  		android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:gravity="right">
				  		<Spinner
				  			android:id="@+id/reply_num_spinner"
				  			android:layout_width="wrap_content"
				  			android:layout_height="wrap_content"/>
			  		</LinearLayout>
			  	</LinearLayout>
			  	<LinearLayout
			  		android:layout_width="fill_parent"
			  		android:layout_height="wrap_content"
			  		android:orientation="horizontal"
			  		android:layout_marginTop="10dip">
			  		<TextView
			  			android:layout_width="wrap_content"
			  			android:layout_height="wrap_content"
			  			android:paddingTop="10dip"
			  			android:textSize="16sp"
			  			android:textColor="#5E5EA2"
			  			android:text="@string/delete_date"/>
			  		<LinearLayout
				  		android:layout_width="fill_parent"
				  		android:layout_height="wrap_content"
				  		android:gravity="right">
				  		<Button
				  			android:id="@+id/datacache_btn"
				  			android:layout_width="60dip"
				  			android:layout_height="wrap_content"
				  			android:gravity="center"
				  			android:text="@string/delete"/>
			  		</LinearLayout>
			  	</LinearLayout>
			 </LinearLayout>
		</LinearLayout>
	</ScrollView>
	<RelativeLayout 
   		android:layout_width="fill_parent" 
   		android:layout_height="wrap_content" 
   		android:background="@drawable/tab_bg_unselected"
   		android:layout_alignParentBottom="true">
       	<RelativeLayout 
          	android:orientation="horizontal" 
          	android:layout_width="fill_parent" 
          	android:gravity="center_vertical"
          	android:paddingTop="5dip"
          	android:layout_height="wrap_content">
      		<Button 
		   		android:id="@+id/set_cancel_btn" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:gravity="center"
				android:textSize="18sp"
				android:textColor="#414342"
				android:text="@string/cancel" />
			<Button 
		   		android:id="@+id/set_enter_btn" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:gravity="center"
				android:textSize="18sp"
				android:textColor="#414342"
				android:text="@string/enter" />
		</RelativeLayout>
	</RelativeLayout>
</LinearLayout>