<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="vertical">
	<ScrollView
	  	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	android:scrollbars="none"
	  	android:cacheColorHint="#00000000"
	  	android:scrollingCache="false"
	  	android:background="@drawable/welcome_bg">
	  	<LinearLayout
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:orientation="vertical">
			<LinearLayout
			  	android:layout_width="fill_parent"
			  	android:layout_height="wrap_content"
			  	android:orientation="vertical"
			  	android:layout_marginLeft="20dip"
			  	android:layout_marginRight="20dip"
			  	android:layout_marginTop="30dip"
			  	android:background="@drawable/login_back">
		  		<LinearLayout
		  			android:layout_width="fill_parent"
		  			android:layout_height="wrap_content"
		  			android:orientation="horizontal">
		  			<ImageView
				  		android:layout_width="72dip"
				  		android:layout_height="wrap_content"
				  		android:layout_gravity="center_vertical"
				  		android:src="@drawable/app_icon"/>
				  	<LinearLayout
			  			android:layout_width="fill_parent"
	  					android:layout_height="wrap_content"
	  					android:orientation="vertical">
	  					<EditText 
					  		android:id="@+id/login_username"
					  		android:layout_width="fill_parent" 
					  		android:layout_height="wrap_content"
							android:layout_marginLeft="5dip"
							android:lines="1"
							android:hint="@string/user_name"
							android:inputType="textEmailAddress"
							android:background="@drawable/edit_bg"  />
						<EditText 
					  		android:id="@+id/login_password"
					  		android:layout_width="fill_parent" 
					  		android:layout_height="wrap_content"
							android:layout_marginTop="5dip" 
							android:layout_marginLeft="5dip"
							android:lines="1"
							android:hint="@string/password"
							android:inputType="textPassword"
							android:background="@drawable/edit_bg"   />
		  				</LinearLayout>
		  			</LinearLayout>		  	
				<FrameLayout
					android:layout_width="fill_parent" 
			  		android:layout_height="wrap_content"
			  		android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip">
			  		<LinearLayout
			  			android:layout_width="fill_parent"
			  			android:layout_height="wrap_content"
			  			android:orientation="horizontal"
			  			android:gravity="left">
			  			<CheckBox
			  				android:id="@+id/check_remember"
			  				android:layout_width="wrap_content"
			  				android:layout_height="wrap_content"/>
			  			<TextView
			  				android:layout_width="wrap_content"
			  				android:layout_height="wrap_content"
			  				android:text="@string/remember_pwd"/>		  				
			  		</LinearLayout>
			  		<LinearLayout
			  			android:layout_width="fill_parent"
			  			android:layout_height="wrap_content"
			  			android:orientation="horizontal"
			  			android:gravity="right">
			  			<CheckBox
			  				android:id="@+id/check_auto"
			  				android:layout_width="wrap_content"
			  				android:layout_height="wrap_content"/>
			  			<TextView
			  				android:layout_width="wrap_content"
			  				android:layout_height="wrap_content"
			  				android:text="@string/auto_login"/>		  				
			  		</LinearLayout>
			  	</FrameLayout>			  
			</LinearLayout>
		 	<LinearLayout	
		    	android:layout_width="fill_parent"
		   		android:layout_height="wrap_content" 
		   		android:orientation="vertical" 
		  		android:paddingTop="5dip" 
		  		android:gravity="center">
			   	<Button 
			   		android:id="@+id/login_btn" 
					android:layout_width="200dip"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="#414342"
					android:text="@string/login" />
				<Button 
			   		android:id="@+id/login_regist_btn" 
					android:layout_width="200dip"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip"
					android:layout_gravity="center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="#414342"
					android:text="@string/regist"/>
				<Button 
			   		android:id="@+id/login_findpwd" 
					android:layout_width="200dip"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip"
					android:layout_gravity="center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="#414342"
					android:text="@string/forget_password" />
		     </LinearLayout>
		     <TextView
			    android:id="@+id/login_error_text"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="left"
			    android:textSize="12dip"
			    android:lines="1"
			    android:textColor="#FF4500"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>