<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="vertical">
	<ScrollView
	  	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	android:scrollbars="none"
	  	android:cacheColorHint="#00000000"
	  	android:scrollingCache="false"
	  	android:background="@drawable/welcome_bg">
		<LinearLayout
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent"
		  	android:orientation="vertical"
		  	android:paddingTop="80dip"
		  	android:paddingLeft="20dip"
		  	android:paddingRight="20dip">
		  	<LinearLayout
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:orientation="vertical"
		  		android:background="@drawable/login_back">
			  	<EditText 
			  		android:id="@+id/forget_username"
			  		android:layout_width="fill_parent" 
			  		android:layout_height="wrap_content"
					android:layout_marginTop="10dip" 
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:lines="1"
					android:hint="@string/user_name"
					android:inputType="textEmailAddress" 
					android:background="@drawable/edit_bg"  />
				<EditText 
			  		android:id="@+id/forget_email"
			  		android:layout_width="fill_parent" 
			  		android:layout_height="wrap_content"
					android:layout_marginTop="10dip" 
					android:layout_marginLeft="10dip"
					android:layout_marginRight="10dip"
					android:lines="1"
					android:hint="@string/email"
					android:inputType="textEmailAddress" 
					android:background="@drawable/edit_bg"  />
			</LinearLayout>
		    <LinearLayout	
		    	android:layout_width="fill_parent"
		   		android:layout_height="wrap_content" 
		   		android:orientation="horizontal" 
		  		android:paddingTop="5dip" 
		  		android:gravity="center">
			   	<Button 
			   		android:id="@+id/forget_send_btn" 
					android:layout_width="200dip"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:gravity="center"
					android:textSize="18sp"
					android:textColor="#414342"
					android:text="@string/send" />
		     </LinearLayout>
		     <TextView
			    android:id="@+id/forget_error_text"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="left"
			    android:textSize="12dip"
			    android:lines="1"
			    android:textColor="#FF4500"/>
		 </LinearLayout>
	</ScrollView>
</LinearLayout>