<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">			
	<FrameLayout 
		android:id="@android:id/tabcontent" 
		android:layout_weight="1"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent" 
		android:background="@color/mi">
		<ExpandableListView
			android:id="@+id/mainList"
			android:layout_width="fill_parent"    
		   	android:layout_height="fill_parent"
		   	android:listSelector="#00000000"
		   	android:cacheColorHint="#00000000"
	   		android:fadingEdge="none"
	   		android:scrollbars="none"
	   		android:scrollingCache="false"
	   		android:divider="#d0dee7"  
          	android:dividerHeight="1px"
          	android:background="@color/mi"/>
		<ListView
			android:id="@+id/hostList"
			android:layout_width="fill_parent"    
		   	android:layout_height="fill_parent"
		   	android:listSelector="#00000000"
		   	android:cacheColorHint="#00000000"
	   		android:divider="#d0dee7" 
	        android:dividerHeight="1px" 
	   		android:fadingEdge="none"
	   		android:scrollbars="none"
	   		android:scrollingCache="false"
	   		android:background="@color/mi"/>
		<ListView
			android:id="@+id/newList"
		   	android:layout_width="fill_parent"    
		   	android:layout_height="fill_parent"
		   	android:listSelector="#00000000"
		   	android:cacheColorHint="#00000000"
	   		android:divider="#d0dee7" 
	        android:dividerHeight="1px" 
	   		android:fadingEdge="none"
	   		android:scrollbars="none"
	   		android:scrollingCache="false"
	   		android:background="@color/mi"/>
	</FrameLayout>
	<LinearLayout
		android:id="@+id/main_grid"
		android:layout_width="fill_parent" 
       	android:layout_height="wrap_content" 
       	android:layout_alignParentBottom="true"
       	android:orientation="horizontal"
       	android:background="@drawable/tab_bg_selector">
       	<RelativeLayout
       		android:id="@+id/forum_rl"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:paddingTop="3dip"
       		android:layout_weight="1"
       		android:gravity="center"
       		android:background="@drawable/tab_bg_selector">
       		<ImageView
       		    android:id="@+id/forum_img"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:src="@drawable/home"/>
       		<TextView
       			android:layout_below="@id/forum_img"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:layout_gravity="center"
       			android:text="@string/forum"/>
       	</RelativeLayout>
      	<RelativeLayout
       		android:id="@+id/hot_rl"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:paddingTop="3dip"
       		android:layout_weight="1"
       		android:gravity="center"
       		android:background="@drawable/tab_bg_selector">
       		<ImageView
       		    android:id="@+id/hot_img"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:src="@drawable/hot"/>
       		<TextView
       			android:layout_below="@id/hot_img"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:layout_gravity="center"
       			android:text="@string/hot"/>
       	</RelativeLayout>
       	<RelativeLayout
       		android:id="@+id/new_rl"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:paddingTop="3dip"
       		android:layout_weight="1"
       		android:gravity="center"
       		android:background="@drawable/tab_bg_selector">
       		<ImageView
       		    android:id="@+id/new_img"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:src="@drawable/news"/>
       		<TextView
       			android:layout_below="@id/new_img"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:layout_gravity="center"
       			android:text="@string/lastest"/>
       	</RelativeLayout>
     </LinearLayout>
</LinearLayout>