<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:orientation="vertical">
	<ScrollView
	  	android:layout_width="fill_parent"
	  	android:layout_height="fill_parent"
	  	android:scrollbars="none"
	  	android:background="@color/mi">
	  	<LinearLayout
		  	android:orientation="vertical"
		  	android:layout_width="fill_parent"
		  	android:layout_height="fill_parent">
		  	<LinearLayout
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="30dip"
		  		android:orientation="horizontal">
		  		<TextView
		  			android:id="@+id/send_posts_title"
		  			android:layout_width="wrap_content"
		  			android:layout_height="wrap_content"
		  			android:layout_margin="5dip"
		  			android:textColor="#000000"
		  			android:textSize="16sp"
		  			android:text="@string/title"/>
		  		<EditText
		  			android:id="@+id/send_title"
		  			android:layout_width="fill_parent"
		  			android:layout_height="wrap_content"
		  			android:singleLine="true"
		  			android:layout_margin="5dip"
		  			android:textSize="16sp"
		  			android:background="@drawable/edit_bg"/>
		  	</LinearLayout>
		  	<LinearLayout
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:orientation="horizontal">
		  		<TextView
		  			android:layout_width="wrap_content"
		  			android:layout_height="wrap_content"
		  			android:layout_margin="5dip"
		  			android:textColor="#000000"
		  			android:textSize="16sp"
		  			android:text="@string/content"/>
		  		<EditText
		  			android:id="@+id/send_message"
		  			android:layout_width="fill_parent"
		  			android:layout_height="wrap_content"
		  			android:layout_margin="5dip"
		  			android:gravity="top"
		  			android:lines="6"
		  			android:textSize="16sp"
		  			android:textColor="#000000"
		  			android:background="@drawable/edit_bg"/>
		  	</LinearLayout>
		  	<FrameLayout
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content">
		  		<LinearLayout	
			    	android:layout_width="fill_parent"
			   		android:layout_height="wrap_content" 
			   		android:orientation="horizontal" 
			  		android:gravity="left"> 	
				   	<ImageButton 
				   		android:id="@+id/camera_btn" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="30dip"
						android:padding="5dip"
						android:gravity="center"
						android:background="@drawable/camera_img" />
					<ImageButton 
				   		android:id="@+id/face_btn" 
						android:layout_width="36dip"
						android:layout_height="36dip"
						android:layout_marginLeft="20dip"
						android:padding="5dip"
						android:gravity="center"
						android:background="@drawable/smile" />
				</LinearLayout>
		  		<LinearLayout	
			    	android:layout_width="fill_parent"
			   		android:layout_height="wrap_content" 
			   		android:orientation="horizontal" 
			  		android:gravity="right"> 	
				   	<Button 
				   		android:id="@+id/send_btn" 
						android:layout_width="70dip"
						android:layout_height="35dip"
						android:layout_marginRight="10dip"
						android:gravity="center"
						android:text="@string/send"
						android:background="@drawable/btn_bg" />
				</LinearLayout>
		  	</FrameLayout>
			<LinearLayout
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="vertical">
				<ImageView 
					android:id="@+id/send_bitmap"
					android:layout_width="wrap_content" 
					android:layout_height="100dip"/>
				<TextView 
					android:id="@+id/send_bitmap_btn"
					android:layout_width="80dip" 
					android:layout_height="wrap_content"
					android:layout_marginTop="5dip" 
					android:gravity="center" 
					android:background="@drawable/toolbar_menu_release" />
			</LinearLayout>
			<TextView
			    android:id="@+id/sendposts_error_text"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:gravity="left"
			    android:textSize="12dip"
			    android:textColor="#FF4500"/>	
		</LinearLayout>
	</ScrollView>
</LinearLayout>